add_library(absl STATIC "absl/base/internal/throw_delegate.cc" "absl/strings/ascii.cc" "absl/strings/charconv.cc" "absl/strings/escaping.cc" "absl/strings/internal/charconv_bigint.cc" "absl/strings/internal/charconv_parse.cc" "absl/strings/internal/memutil.cc" "absl/strings/match.cc" "absl/strings/numbers.cc" "absl/strings/string_view.cc" "absl/strings/str_cat.cc" "absl/strings/str_replace.cc" "absl/strings/str_split.cc" "absl/strings/substitute.cc" "absl/types/bad_optional_access.cc")